--- a/global-style.css
+++ b/global-style.css
@@ -8,14 +8,12 @@ html, body {
     margin: 0;
     min-height: 100%;
     height: 100%;
-    background: #040404;
-
+    background-color: #111;
 }
 
 header, footer {
     background: #492c16;
     width: 100%;
-    /*height: 210px;*/
     padding: 20px 0;
 }
 
@@ -25,13 +23,28 @@ header img {
 }
 
 section, aside {
-    width: 800px;
-    margin: auto;
+    margin: 0 auto;
     background-color: #7F4D26;
+    padding:20px 10px;
 }
 
 dt, dd {
     display: inline-block;
     width: 40%;
     margin: 0;
+}
+
+dt {
+    text-align: right;
+}
+
+section:nth-child(even) {
+    background-color: #eee;
+    color: #333;
+
+}
+
+div {
+    width: 850px;
+    margin: auto;
 }
