--- a/global-style.css
+++ b/global-style.css
@@ -1,9 +1,7 @@
 html {
     color: #d7d9d9;
     font-family: sans-serif;
-    font-size: 1em;
     text-transform: uppercase;
-    box-sizing: border-box;
 }
 
 html, body {
@@ -12,6 +10,9 @@ html, body {
     min-height: 100%;
     height: 100%;
     background-color: #111;
+    font-size: 1.3em;
+    line-height: 1.6em;
+    box-sizing: border-box;
 }
 
 header, footer {
@@ -34,20 +35,16 @@ section, aside {
 
 dt, dd {
     display: inline-block;
-    width: 40%;
+    width: 49%;
     margin: 0;
+    box-sizing: border-box;
 }
 
 dt {
     text-align: right;
 }
 
-section:nth-child(even) {
-    background-color: #f5e7cd;
-    color: #171315;
-
-}
 
 :first-letter {
-    font-size: 1.1em;
+    font-size: 1.0em;
 }
