--- a/global-style.css
+++ b/global-style.css
@@ -9,7 +9,7 @@ html, body {
     margin: 0;
     min-height: 100%;
     height: 100%;
-    background-color: #111;
+    background-color: #a9acac;
     font-size: 1.3em;
     line-height: 1.6em;
     box-sizing: border-box;
@@ -33,6 +33,11 @@ section, aside {
     padding:20px 10px;
 }
 
+dl {
+    margin: 0;
+    display: inline-block;
+}
+
 dt, dd {
     display: inline-block;
     width: 49%;
@@ -47,4 +52,9 @@ dt {
 
 :first-letter {
     font-size: 1.0em;
+}
+
+
+section hr {
+    border: 1px dashed black;
 }
