--- a/global-style.css
+++ b/global-style.css
@@ -1,5 +1,5 @@
 html {
-    color: #d7d9d9;
+    /*color: #d7d9d9;*/
     font-family: sans-serif;
     text-transform: uppercase;
 }
@@ -8,18 +8,36 @@ html, body {
     padding: 0;
     margin: 0;
     min-height: 100%;
-    height: 100%;
-    background-color: #a9acac;
-    font-size: 1.3em;
+    /*height: 100%;*/
+    /*background-color: #a9acac;*/
+    font-size: 1.25em;
     line-height: 1.6em;
     box-sizing: border-box;
+}
+
+body {
+    background-image: url("img/background.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 header, footer {
     background: #492c16;
     width: 100%;
-    padding: 50px 0;
+    box-sizing: border-box;
 }
+header {
+    /*border-top:solid 30px #492c16;*/
+    color: transparent;
+    background-repeat:  no-repeat;
+}
+
+footer {
+    padding: 5px 0;
+    font-size: 0.5em;
+    text-align: right;
+}
+
 
 header img {
     margin: auto;
@@ -31,6 +49,7 @@ section, aside {
     background-color: #9b1f1c;
     color: #f5e7cd;
     padding:20px 10px;
+    box-sizing: border-box;
 }
 
 dl {
@@ -50,11 +69,25 @@ dt {
 }
 
 
-:first-letter {
-    font-size: 1.0em;
+/*:first-letter {*/
+    /*font-size: 1.0em;*/
+/*}*/
+
+
+section hr, aside hr {
+    border: 1px dashed black;
 }
 
-
-section hr {
-    border: 1px dashed black;
+a,
+a:visited,
+a:hover,
+a:active,
+section p {
+    margin: 0;
+    text-align: right;
+    font-size: 0.85em;
+    line-height: 1.4em;
+    text-decoration: none;
+    color: #f5e7cd;
+    display: block;
 }
