--- a/medium.css
+++ b/medium.css
@@ -1,6 +1,13 @@
 @media only screen
-and (min-width : 300px)
+and (min-width : 800px)
 {
+
+
+    header {
+        height:172px;
+        background-position: center 30px;
+        background-image: url("img/logo-450.png");
+    }
 
     div {
         width: 800px;
@@ -13,8 +20,7 @@ and (min-width : 300px)
         vertical-align: top;
         text-align: center;
         width: 50%;
-        height: 380px;
-        box-sizing: border-box;
+        min-height: 260px;
     }
 
     aside {
@@ -29,7 +35,7 @@ and (min-width : 300px)
         width: 100%;
         background-color: #f5e7cd;
         color: #171315;
-        height: 300px;
+        /*height: 300px;*/
         min-height: 300px;
         padding-bottom: 20px;
     }
@@ -39,4 +45,33 @@ and (min-width : 300px)
         margin: 0;
     }
 
+    section:nth-child(2) p {
+        margin: 10px 0;
+
+    }
+
+    section:nth-child(2) hr {
+        border: 1px dashed #f5e7cd;
+        margin:12px 0;
+
+    }
+
+    section:last-child {
+        width: 100%;
+        background-color: #f5e7cd;
+        color: #171315;
+    }
+
+
+
+    footer a,
+    footer a:visited,
+    footer a:hover,
+    footer a:active
+    {
+        color: #f5e7cd;
+        width: 760px;
+        display: block;
+        margin: auto;
+    }
 }
