--- a/medium.css
+++ b/medium.css
@@ -11,7 +11,7 @@ and (min-width : 800px)
 
     div {
         width: 800px;
-        margin: auto;
+        margin: 36px auto;
     }
 
 
@@ -47,7 +47,7 @@ and (min-width : 800px)
 
     section:nth-child(2) p {
         margin: 10px 0;
-
+        line-height: 1.2em;
     }
 
     section:nth-child(2) hr {
