--- a/global-style.css
+++ b/global-style.css
@@ -1,7 +1,7 @@
 html {
     /*color: #d7d9d9;*/
-    font-family: sans-serif;
-    text-transform: uppercase;
+    font-family: 'Orbitron', sans-serif;
+    /*text-transform: uppercase;*/
 }
 
 html, body {
@@ -10,7 +10,7 @@ html, body {
     min-height: 100%;
     /*height: 100%;*/
     /*background-color: #a9acac;*/
-    font-size: 1.25em;
+    font-size: 1em;
     line-height: 1.6em;
     box-sizing: border-box;
 }
@@ -48,7 +48,7 @@ section, aside {
     margin: 0 auto;
     background-color: #9b1f1c;
     color: #f5e7cd;
-    padding:20px 10px;
+    padding:32px;
     box-sizing: border-box;
 }
 
@@ -90,4 +90,8 @@ section p {
     text-decoration: none;
     color: #f5e7cd;
     display: block;
+}
+
+section p {
+    color: #171315;
 }
