--- a/global-style.css
+++ b/global-style.css
@@ -1,53 +1,108 @@
 html {
-    color: #d7d9d9;
-    font-family: sans-serif;
-    font-size: 1em;
-    text-transform: uppercase;
-    box-sizing: border-box;
+    /*color: #d7d9d9;*/
+    font-family: 'Orbitron', sans-serif;
+    /*text-transform: uppercase;*/
 }
 
 html, body {
     padding: 0;
     margin: 0;
     min-height: 100%;
-    height: 100%;
-    background-color: #111;
+    /*height: 100%;*/
+    /*background-color: #a9acac;*/
+    font-size: 1em;
+    line-height: 1.6em;
+    box-sizing: border-box;
+}
+
+body {
+    background-image: url("img/background.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 header, footer {
     background: #492c16;
     width: 100%;
-    padding: 20px 0;
+    box-sizing: border-box;
 }
+header {
+    /*border-top:solid 30px #492c16;*/
+    color: transparent;
+    background-repeat:  no-repeat;
+}
+
+footer {
+    padding: 5px 0;
+    font-size: 0.5em;
+    text-align: right;
+}
+
 
 header img {
     margin: auto;
     display: block;
 }
 
-section, aside {
+section  {
     margin: 0 auto;
     background-color: #9b1f1c;
     color: #f5e7cd;
-    padding:20px 10px;
+    padding:32px;
+    box-sizing: border-box;
+    margin-bottom: 16px;
+}
+
+dl {
+    margin: 4px 0;
+    display: inline-block;
 }
 
 dt, dd {
     display: inline-block;
-    width: 40%;
+    width: 49%;
     margin: 0;
+    box-sizing: border-box;
 }
 
 dt {
     text-align: right;
 }
 
-section:nth-child(even) {
-    background-color: #f5e7cd;
-    color: #171315;
 
+/*:first-letter {*/
+    /*font-size: 1.0em;*/
+/*}*/
+
+
+section hr, aside hr {
+    border: 1px dashed black;
 }
 
-:first-letter {
-    font-size: 1.1em;
+a,
+a:visited,
+a:hover,
+a:active,
+section p {
+    margin: 0;
+    text-align: right;
+    font-size: 0.85em;
+    line-height: 1.4em;
+    text-decoration: none;
+    color: #f5e7cd;
+    display: block;
+}
+
+section p {
+    color: #171315;
+}
+
+aside img {
+
+width:100%
+}
+
+h2 {
+    color: #9b1f1c;
+    margin-bottom: 2px;
 }
