--- a/medium.css
+++ b/medium.css
@@ -1,19 +1,93 @@
 @media only screen
 and (min-width : 800px)
 {
+    header {
+        height:172px;
+        background-position: center 30px;
+        background-image: url("img/logo-450.png");
+    }
 
     div {
         width: 800px;
-        margin: auto;
+        margin: 36px auto;
     }
-
 
     section, aside {
         display: inline-block;
         vertical-align: top;
         text-align: center;
-        width: 380px;
-        height: 380px;
+        width: 50%;
+        min-height: 280px;
     }
 
+    aside {
+        font-size: 0.5em;
+        line-height: normal;
+        color: #171315;
+        background-color: #f5e7cd;
+        width: 100%;
+    }
+
+    section:first-child {
+        background-color: #f5e7cd;
+        padding-right: 10px;
+        color: #171315;
+        min-height: 360px;
+        padding-bottom: 20px;
+        width: 35%;
+        font-size: 0.75em;
+    }
+
+    section:first-child h1 {
+        color: #9b1f1c;
+        margin: 0;
+    }
+
+    section:nth-child(2) {
+        background-color: #f5e7cd;
+        color: #171315;
+        width: 65%;
+        min-height: 360px;
+        font-size: 1.25em;
+        padding-left: 60px;
+    }
+
+    section:nth-child(2) p {
+        margin: 10px 0;
+        /*line-height: 1.2em;*/
+        line-height: 1.5em;
+        color: #171315;
+        /*color: #9b1f1c;*/
+        text-align: left;
+    }
+
+    section:nth-child(2) hr {
+        border: 1px dashed #f5e7cd;
+        margin:12px 0;
+
+    }
+
+    section:last-child,
+    section:last-child p
+    {
+        /*width: 100%;*/
+        background-color: #9b1f1c;
+        color: #f5e7cd;
+        font-size: 1.25em;
+
+
+    }
+
+
+
+    footer a,
+    footer a:visited,
+    footer a:hover,
+    footer a:active
+    {
+        color: #f5e7cd;
+        width: 760px;
+        display: block;
+        margin: auto;
+    }
 }
